--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
+    "@bbob/html": "^2.9.0",
+    "@bbob/preset-html5": "^2.9.0",
     "next": "16.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
